--- a/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/activity_action_list.xml
+++ b/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/activity_action_list.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context=".screens.ActionListActivity">
+    tools:context=".screens.report.ActionListActivity">
 
     <!-- Reloj / Tiempo -->
     <TextView
@@ -25,7 +25,7 @@
     <!-- Marcador -->
     <fragment
         android:id="@+id/scoreboard"
-        android:name="com.example.rellotgejais.screens.Scoreboard"
+        android:name="com.example.rellotgejais.screens.fragments.ScoreboardFragment"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:padding="8dp"
