--- a/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/activity_incidence.xml
+++ b/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/activity_incidence.xml
@@ -35,14 +35,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         tools:layout="@layout/fragment_timer"
-        android:name="com.example.rellotgejais.screens.TimerFragment"/>
+        android:name="com.example.rellotgejais.screens.fragments.TimerFragment"/>
 
     <fragment
         android:id="@+id/scoreboard_fragment"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         tools:ignore="MissingConstraints"
-        android:name="com.example.rellotgejais.screens.Scoreboard"
+        android:name="com.example.rellotgejais.screens.fragments.ScoreboardFragment"
         tools:layout="@layout/fragment_scoreboard"
         android:layout_marginTop="45dp"
         app:layout_constraintEnd_toEndOf="parent"
