--- a/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/activity_main.xml
+++ b/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/activity_main.xml
@@ -5,10 +5,10 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".screens.MainActivity">
+    tools:context=".screens.user.MainActivity">
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/startBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Button"
