--- a/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/activity_player_pick.xml
+++ b/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/activity_player_pick.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context=".screens.PlayerPickActivity">
+    tools:context=".screens.report.PlayerPickActivity">
 
     <!-- Reloj / Tiempo -->
     <fragment
@@ -17,12 +17,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="10dp"
         tools:layout="@layout/fragment_timer"
-        android:name="com.example.rellotgejais.screens.TimerFragment"/>
+        android:name="com.example.rellotgejais.screens.fragments.TimerFragment"/>
 
     <!-- Marcador -->
     <fragment
         android:id="@+id/scoreboard"
-        android:name="com.example.rellotgejais.screens.Scoreboard"
+        android:name="com.example.rellotgejais.screens.fragments.ScoreboardFragment"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/timer"
