--- a/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/activity_team_pick.xml
+++ b/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/activity_team_pick.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".screens.TeamPickActivity"
+    tools:context=".screens.report.TeamPickActivity"
     android:background="@color/black">
 
     <androidx.constraintlayout.widget.Guideline
@@ -27,7 +27,7 @@
         app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:name="com.example.rellotgejais.screens.Scoreboard" />
+        android:name="com.example.rellotgejais.screens.fragments.ScoreboardFragment" />
 
 
     <ImageButton
