--- a/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/fragment_timer.xml
+++ b/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/fragment_timer.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    tools:context=".screens.TimerFragment"
+    tools:context=".screens.fragments.TimerFragment"
     android:id="@+id/chronometer">
     <TextView
         android:id="@+id/textViewTimer"
