A lot of changes, implemented a bit of api. Implemented a lot of models and classes from the mobile app to the clock app. Added the dependencies needed to start implementing the Socket.io client. TODO: - Implement some screens in the clock app or handle everything in the first screen: - The clock should load the data from the LocalStorage if it has some - If there is no data, then requests the QR - The QR should have a button to reset the code. - There should be a screen or a page to desync the referee from the clock QR. - I need to add more endpoints to the API to delete the clock QRs, find referee by QR maybe idk. - Maybe make the QR only for pairing but after the pairing, the clock will use the same stored referee until the QR is deleted. (makes some sense)

--- a/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/activity_accions.xml
+++ b/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/activity_accions.xml
@@ -30,7 +30,7 @@
     <!--BotonQuadrante izquierda    -->
 
     <ImageButton
-        android:id="@+id/tarjetas"
+        android:id="@+id/cardsBtn"
         android:layout_width="120px"
         android:layout_height="120px"
         android:layout_marginEnd="48dp"
@@ -44,7 +44,7 @@
         app:layout_constraintEnd_toStartOf="@id/guideline_vertical" />
 
     <ImageButton
-        android:id="@+id/PausaStart"
+        android:id="@+id/pauseBtn"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginStart="48dp"
@@ -58,7 +58,7 @@
         app:layout_constraintStart_toEndOf="@id/guideline_vertical" />
 
     <ImageButton
-        android:id="@+id/gol"
+        android:id="@+id/goalBtn"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginTop="4dp"
@@ -72,7 +72,7 @@
         app:layout_constraintTop_toBottomOf="@id/guideline_horizontal" />
 
     <ImageButton
-        android:id="@+id/inccidencias"
+        android:id="@+id/warningBtn"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginStart="12dp"
@@ -97,19 +97,16 @@
         android:name="com.example.rellotgejais.screens.fragments.TimerFragment"
         tools:layout="@layout/fragment_timer"/>
 
-    <fragment
-        android:id="@+id/scoreboard_fragment"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/scoreboard"
         android:layout_width="150dp"
+        android:layout_marginTop="32dp"
         android:layout_height="wrap_content"
         tools:ignore="MissingConstraints"
-        android:name="com.example.rellotgejais.screens.fragments.ScoreboardFragment"
-        tools:layout="@layout/fragment_scoreboard"
-        android:layout_marginTop="32dp"
+        tools:layout="@layout/fragment_score"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/guideline_horizontal" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
