--- a/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/activity_incidence.xml
+++ b/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/activity_incidence.xml
@@ -42,8 +42,7 @@
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         tools:ignore="MissingConstraints"
-        android:name="com.example.rellotgejais.screens.fragments.ScoreboardFragment"
-        tools:layout="@layout/fragment_scoreboard"
+        tools:layout="@layout/fragment_score"
         android:layout_marginTop="45dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
