--- a/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/activity_incident_list.xml
+++ b/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/activity_incident_list.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context=".screens.report.ActionListActivity">
+    tools:context=".screens.report.IncidentListActivity">
 
     <!-- Reloj / Tiempo -->
     <TextView
@@ -25,14 +25,13 @@
     <!-- Marcador -->
     <fragment
         android:id="@+id/scoreboard"
-        android:name="com.example.rellotgejais.screens.fragments.ScoreboardFragment"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:padding="8dp"
         app:layout_constraintTop_toBottomOf="@id/timer"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:layout="@layout/fragment_scoreboard"/>
+        tools:layout="@layout/fragment_score"/>
 
     <!-- Lista de incidencias optimizada para Wear OS -->
     <androidx.recyclerview.widget.RecyclerView
