--- a/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/activity_micro_phone.xml
+++ b/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/activity_micro_phone.xml
@@ -21,7 +21,6 @@
 
     <fragment
         android:id="@+id/scoreboard_fragment"
-        android:name="com.example.rellotgejais.screens.fragments.ScoreboardFragment"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="36dp"
@@ -30,7 +29,7 @@
         app:layout_constraintEnd_toStartOf="@id/guideline_vertical"
         app:layout_constraintStart_toStartOf="@+id/timer"
         app:layout_constraintTop_toBottomOf="@id/timer"
-        tools:layout="@layout/fragment_scoreboard" />
+        tools:layout="@layout/fragment_score" />
 
 
 
