--- a/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/activity_player_pick.xml
+++ b/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/activity_player_pick.xml
@@ -22,12 +22,11 @@
     <!-- Marcador -->
     <fragment
         android:id="@+id/scoreboard"
-        android:name="com.example.rellotgejais.screens.fragments.ScoreboardFragment"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/timer"
         tools:layout_editor_absoluteX="85dp"
-        tools:layout="@layout/fragment_scoreboard"
+        tools:layout="@layout/fragment_score"
         tools:ignore="MissingConstraints"
         android:padding="8dp"
         app:layout_constraintStart_toStartOf="parent"
