--- a/APPS/reloj/RellotgeJAIS/app/src/main/res/values/colors.xml
+++ b/APPS/reloj/RellotgeJAIS/app/src/main/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="transparent">#00000000</color>
+    <color name="light_red">#FF3F3F</color>
 </resources>
