--- a/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/activity_incidence.xml
+++ b/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/activity_incidence.xml
@@ -1,13 +1,39 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/toolsç"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools2="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".screens.IncidenceActivity"
+    tools:context=".screens.report.IncidentActivity"
     android:background="@color/black">
+
+    <!-- Reloj / Tiempo -->
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/timer"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="24sp"
+        android:layout_marginTop="12dp"
+        android:name="com.example.rellotgejais.screens.fragments.TimerFragment"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout="@layout/fragment_timer" />
+
+    <!-- Marcador -->
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/scoreboard"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        tools:ignore="MissingConstraints"
+        android:layout_marginTop="-10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/timer"
+        android:name="com.example.rellotgejais.screens.fragments.ScoreFragment"
+        tools:layout="@layout/fragment_score" />
+
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_horizontal"
@@ -26,28 +52,7 @@
 
     <!--Luego hay que colocar fragment del tiempo-->
 
-    <fragment
-        android:id="@+id/timer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:layout="@layout/fragment_timer"
-        android:name="com.example.rellotgejais.screens.fragments.TimerFragment"/>
 
-    <fragment
-        android:id="@+id/scoreboard_fragment"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints"
-        tools:layout="@layout/fragment_score"
-        android:layout_marginTop="45dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/guideline_horizontal" />
 
     <ImageButton
         android:id="@+id/lesionBtn"
