--- a/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_microphone.xml
+++ b/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_microphone.xml
@@ -52,6 +52,7 @@
         app:layout_constraintTop_toBottomOf="@id/scoreboard"
         android:scaleType="centerInside"/>
 
+
     <ImageButton
         android:id="@+id/flipBtn"
         android:layout_margin="15dp"
@@ -65,13 +66,20 @@
 
     <TextView
         android:id="@+id/micTextBoard"
-        android:layout_width="514dp"
-        android:layout_height="202dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toEndOf="@id/micBtn"
+        android:layout_marginStart="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/textboard"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="151dp"
-        tools:layout_editor_absoluteY="189dp"
+        android:text="Pulsa para Grabar."
         android:textSize="14dp"
-        android:text="Pulsa para Grabar."/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/scoreboard"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="70dp"
+        tools:ignore="MissingConstraints" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
