--- a/refereezy-website/frontend/style/arbitros.css
+++ b/refereezy-website/frontend/style/arbitros.css
@@ -9,6 +9,8 @@
 }
 */
 
+@import url('base.css'); /* Import base styles */
+
 :root {
     --bg: #202020;
     --nav-bg: #2b2b2b;
@@ -33,6 +35,7 @@ body {
 
   /* Navbar */
   .dashboard-nav {
+    width: 100%;
     background-color: var(--nav-bg);
     display: flex;
     justify-content: space-between;
@@ -77,7 +80,7 @@ body {
     position: relative;
     border-radius: 1rem;
     overflow: hidden;
-    background: linear-gradient(135deg, var(--primary) 0%, var(--secondary) 100%);
+    /* background: linear-gradient(135deg, var(--primary) 0%, var(--secondary) 100%); */
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
@@ -192,7 +195,7 @@ body {
 
 .add-referee-btn:hover,
 .view-referees-btn:hover {
-    background-color: var(--primary);
+    background-color: var(--hover);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
