--- a/refereezy-website/frontend/style/jugadores.css
+++ b/refereezy-website/frontend/style/jugadores.css
@@ -1,3 +1,5 @@
+@import url('base.css'); /* Import base styles */
+
 /* Reset y variables */
 :root {
     --bg: #202020;
@@ -67,7 +69,7 @@ body {
     position: relative;
     border-radius: 1rem;
     overflow: hidden;
-    background: linear-gradient(135deg, var(--primary) 0%, var(--secondary) 100%);
+   /*  background: linear-gradient(135deg, var(--primary) 0%, var(--secondary) 100%); */
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
