--- a/refereezy-website/frontend/style/partidos.css
+++ b/refereezy-website/frontend/style/partidos.css
@@ -1,3 +1,5 @@
+@import url('base.css'); /* Import base styles */
+
 /* Reset y variables */
 :root {
     --bg: #202020;
@@ -66,7 +68,7 @@ body {
     position: relative;
     border-radius: 1rem;
     overflow: hidden;
-    background: linear-gradient(135deg, var(--primary) 0%, var(--secondary) 100%);
+    /* background: linear-gradient(135deg, var(--primary) 0%, var(--secondary) 100%); */
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
@@ -156,8 +158,8 @@ body {
 .view-matches-btn {
     width: 100%;
     height: 3.5rem;
-    background-color: var(--nav-bg);
-    color: var(--text);
+    background-color: var(--primary);
+    color: black;
     border: none;
     border-radius: 0.5rem;
     font-size: 1.125rem;
@@ -169,7 +171,7 @@ body {
 
 .create-match-btn:hover,
 .view-matches-btn:hover {
-    background-color: rgba(43, 43, 43, 0.9);
+    background-color: var(--hover);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
